--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,28 +4,38 @@ on: [push, pull_request]
 
 jobs:
   build:
-
+    name: Build
     runs-on: macos-latest
+    env:
+      JOB_TYPE: BUILD
     steps:
-    - uses: actions/checkout@v4.1.7
-    - name: Checkout submodules
-      run: git submodule update --init
-    - name: get shortsha
-      id: vars
-      run: |
-        echo ::set-output name=sha_short::$(git rev-parse --short=8 ${{ github.sha }})
-    - name: Get SDK
-      run: |
-        git clone --depth 1 https://github.com/acidanthera/MacKernelSDK.git
-    - name: build
-      env:
-          VOODOOSMBUS_SHA: VoodooSMBus-${{ steps.vars.outputs.sha_short }}
-      run: |
-        mkdir build
-        xcodebuild -scheme VoodooSMBus build CONFIGURATION_BUILD_DIR=build/${VOODOOSMBUS_SHA}
-        mv build/${VOODOOSMBUS_SHA}/VoodooSMBus.kext build/${VOODOOSMBUS_SHA}/${VOODOOSMBUS_SHA}.kext
-    - uses: actions/upload-artifact@v4.3.4
-      with:
-        name: VoodooSMBus
-        path: build/VoodooSMBus-*
-  
+      - uses: actions/checkout@v4.1.7
+        with:
+          submodules: recursive
+      - name: get shortsha
+        id: vars
+        run: |
+          echo ::set-output name=sha_short::$(git rev-parse --short=8 ${{ github.sha }})
+      - uses: actions/checkout@v4.1.7
+        with:
+          repository: acidanthera/MacKernelSDK
+          path: MacKernelSDK
+      - uses: actions/setup-python@v5.1.1
+        with:
+          python-version: '3.12.4'
+      - name: Install Python dependencies
+        run: pip install cpplint git+https://github.com/newperson1746/cldoc-fix.git
+      - name: CI Bootstrap
+        run: |
+          src=$(/usr/bin/curl -Lfs https://raw.githubusercontent.com/acidanthera/ocbuild/master/ci-bootstrap.sh) && eval "$src" || exit 1
+      - name: build
+        env:
+            VOODOOSMBUS_SHA: VoodooSMBus-${{ steps.vars.outputs.sha_short }}
+        run: |
+          mkdir build
+          xcodebuild -scheme VoodooSMBus build CONFIGURATION_BUILD_DIR=build/${VOODOOSMBUS_SHA}
+          mv build/${VOODOOSMBUS_SHA}/VoodooSMBus.kext build/${VOODOOSMBUS_SHA}/${VOODOOSMBUS_SHA}.kext
+      - uses: actions/upload-artifact@v4.3.4
+        with:
+          name: VoodooSMBus
+          path: build/VoodooSMBus-*
