--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,13 +5,11 @@ on: [push, pull_request]
 jobs:
   build:
     name: Build
-    runs-on: macos-latest
-    env:
-      JOB_TYPE: BUILD
+    runs-on: macos-13
     steps:
       - uses: actions/checkout@v4.1.7
-      - name: Checkout submodules
-        run: git submodule update --init
+        with:
+          submodules: recursive
       - name: Get shortsha
         id: vars
         run: |
@@ -25,11 +23,6 @@ jobs:
           python-version: '3.12.4'
       - name: Install Python dependencies
         run: pip install cpplint git+https://github.com/newperson1746/cldoc-fix.git
-      - name: CI Bootstrap
-        env:
-          PROJECT_TYPE: KEXT
-        run: |
-          src=$(/usr/bin/curl -Lfs https://raw.githubusercontent.com/acidanthera/ocbuild/master/ci-bootstrap.sh) && eval "$src" || exit 1
       - name: Build
         env:
             VOODOOSMBUS_SHA: VoodooSMBus-${{ steps.vars.outputs.sha_short }}
