--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,20 +10,14 @@ jobs:
       - uses: actions/checkout@v4.1.7
         with:
           submodules: recursive
-      - name: Get shortsha
-        id: vars
-        run: |
-          echo ::set-output name=sha_short::$(git rev-parse --short=8 ${{ github.sha }})
       - uses: actions/checkout@v4.1.7
         with:
           repository: acidanthera/MacKernelSDK
           path: MacKernelSDK
       - name: Build
-        env:
-            VOODOOSMBUS_SHA: VoodooSMBus-${{ steps.vars.outputs.sha_short }}
         run: |
           mkdir build
-          xcodebuild -scheme VoodooSMBus build CONFIGURATION_BUILD_DIR=build/${VOODOOSMBUS_SHA}
+          xcodebuild -scheme VoodooSMBus build
       - uses: actions/upload-artifact@v4.3.4
         with:
           name: VoodooSMBus
