Nevermind, this is the final build!

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Build
         run: |
           mkdir build
-          xcodebuild -scheme VoodooSMBus build
+          xcodebuild -scheme VoodooSMBus build CONFIGURATION_BUILD_DIR=build
       - uses: actions/upload-artifact@v4.3.4
         with:
           name: VoodooSMBus
